// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a simple Tag instance 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Tag"
  onClick={[Function]}
  onError={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  usedelete={false}
  visible={true}
  width={null}
  xcss={null}
>
  <Tag__TagView
    className="ui-tag"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    style={Object {}}
  >
    <Tag__StyledLabel
      disabled={false}
      noedit={true}
      text="test tag"
      visible={true}
    />
  </Tag__TagView>
</Wrapper>
`;

exports[`Test disabling of the simple Tag instance 1`] = `
<Tag
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Tag"
  onClick={[MockFunction]}
  onDelete={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  padding={null}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  usedelete={true}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test making Tag invisible 1`] = `
<Tag
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Tag"
  onClick={[Function]}
  onDelete={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  padding={null}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  usedelete={true}
  visible={false}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of Tag props object 1`] = `
Object {
  "backgroundColor": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "left": null,
  "location": "none",
  "maxHeight": null,
  "maxWidth": null,
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Tag",
  "onClick": [Function],
  "onDelete": [Function],
  "onMouseOut": [Function],
  "onMouseOver": [Function],
  "padding": null,
  "ripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "usedelete": false,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of Tag props object 2`] = `
Object {
  "children": null,
  "showDelete": false,
  "sizing": "normal",
  "style": Object {},
}
`;
